# algoX

./: .gitignore  NOTES.md  README.md  pyproject.toml
algox/: __init__.py  helpers.py
algox/_core/: README.md  linked_list
algox/_core/include/algox/: linked_list.md
algox/_core/include/algox/containers/: array.h  binary_tree.h  linked_list.h  queue.h  stack.h  tries.h
algox/_core/src/containers/: linked_list.c
algox/ds/: __init__.py  linked_list.py  queue.py  stack.py
algox/search/: __init__.py  binary_search.py  linear_search.py
algox/sort/: __init__.py  bubble_sort.py  insertion_sort.py  merge_sort.py  selection_sort.py
benchmarks/: bench_binary_search.py  bench_bubble_sort.py  bench_insertion_sort.py  bench_linear_search.py  bench_selection_sort.py
debug/: perf_binarysearch.py
ds/: linkedlist.py
dsax/: helpers.py  sort.py
dsax/sort/: SelectionSort.py
perf/: perf_BinarySearch.py  perf_BubbleSort.py  perf_SelectionSort.py
src/algox/ds/: __init__.py  stack.py
tests/: test_searching.py  test_sorting.py
