[project]
name = "algox"
version = "0.1.0"
description = "AlgoX is a C-powered algorithms and data structures library for Python. It provides STL-inspired containers, generic algorithms, and low-overhead implementations designed for performance, learning, and experimentation."

readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Prasad Raju G" }]

dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
perf = [
    "matplotlib",
]
